# fourkay

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  build.sh
.cargo/: config
bindings/: Cargo.toml  build.rs
bindings/src/: lib.rs
src/: bak.rs  main.rs  shitty.rs  xlib.rs
src/bindings/: Xlib.rs  Xlib_constants.rs  gl.rs  glx.rs  mod.rs
src/programs/: mod.rs  quad.rs  raymarcher.rs  simple_shader.rs
src/shaders/: balls.glsl  balls.glsl.out  blobby.glsl  blobby.glsl.out  blobs.glsl  discolines.glsl  flower.glsl  flower.glsl.out  quad-fragment.glsl  quad-vertex.glsl  quad-vertex.glsl.out  raymarcher-fragment.glsl  snake.glsl  snake.glsl.out
src/shaders/2022/: blobs.glsl  blobs.glsl.out  discolines.glsl.out  voronoi.glsl  voronoi.glsl.out
src/shitty/: gl_utils.rs  gl_wrapper.rs  mod.rs  println.rs
