[package]
name = "fourkay"
version = "0.1.0"
authors = ["Aleksander Vognild Burkow <aleksanderburkow@gmail.com>"]
edition = "2021"
build = "build.rs"
# crate-type = "staticlib"

[features]
println = []
error-handling = []

[dependencies]
libc = {version = "0.2.*", default-features = false}

[build-dependencies]
bindgen = "0.59.2"
pkg-config = "0.3"

[profile.dev]
panic = "abort"


[profile.release]
strip = true
panic = "abort"
opt-level = 2  # Currently gives the best size  https://rust-embedded.github.io/book/unsorted/speed-vs-size.html
lto = true
codegen-units = 1